k8s/ingress-nginx/base/ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /echo(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              number: 8000
      - path: /list(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: list
            port:
              number: 8000
      - path: /error(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: error
            port:
              number: 8000
