k8s/ingress-nginx/base/ingress-autolog.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autolog-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  namespace: online-autolog
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /autolog(/|$)(.*)
        backend:
          service:
            name: autolog-anomaly-detection
            port:
              number: 8080
