k8s/ingress-nginx/base/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: loki-stack
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /grafana(/|$)(.*)
        backend:
          service:
            name: loki-grafana
            port:
              number: 80
