k8s/ingress-nginx/base/ingress-loki.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  namespace: loki-stack
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /loki(/|$)(.*)
        backend:
          service:
            name: loki
            port:
              number: 3100
