k8s/ingress-nginx/base/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: default
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /hello(/|$)(.*)
        backend:
          service:
            name: hello
            port:
              number: 8000
      # - pathType: Prefix
      #   path: /catalog(/|$)(.*)
      #   backend:
      #     service:
      #       name: catalog
      #       port:
      #         number: 8080
      # - pathType: Prefix
      #   path: /customer(/|$)(.*)
      #   backend:
      #     service:
      #       name: customer
      #       port:
      #         number: 8080
      # - pathType: Prefix
      #   path: /order(/|$)(.*)
      #   backend:
      #     service:
      #       name: order
      #       port:
      #         number: 8080
